--- a/index.html
+++ b/index.html
@@ -66,9 +66,50 @@
         <!-- <h3>Затишок</h3> -->
         <p>Наші кав'ярні створені для вашого комфорту,<br>де ви можете насолоджуватися кавою<br>в приємній атмосфері.</p>
       </div>
+  </section>
+ <footer>
+      <div class="socials">
+        <h2>Сумсінг here</h2>
 
-    <header>
-    </header>
+        <div class="subscribe">
+          <input type="email" placeholder="Enter your email" />
+          <button>Subscribe</button>
+        </div>
+
+        <div class="social-icons">
+          <a href="#" class="icon facebook" aria-label="Facebook"></a>
+          <a href="#" class="icon twitter" aria-label="Twitter"></a>
+          <a href="#" class="icon instagram" aria-label="Instagram"></a>
+          <a href="#" class="icon linkedin" aria-label="LinkedIn"></a>
+        </div>
+      </div>
+      <div class="additionals">
+        <div class="sections">
+          <h3>Розділи</h3>
+          <ul>
+            <li>➡️ Section 1</li>
+            <li>➡️ Section 2</li>
+            <li>➡️ Section 3</li>
+          </ul>
+        </div>
+
+        <div class="contacts-data">
+          <h3>Контакти</h3>
+          <p>
+            <strong>Email:</strong>
+            <a href="mailto:example@example.com">example@example.com</a>
+          </p>
+          <p>
+            <strong>Phone:</strong> <a href="tel:+1234567890">+1 234 567 890</a>
+          </p>
+          <p>
+            <strong>Address:</strong>
+            123 Main Street, City, Country
+          </p>
+        </div>
+      </div>
+
+    </footer>
+
 </body>
-
 </html>
