--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </section>
  <footer>
       <div class="socials">
-        <h2>Сумсінг here</h2>
+        <h2>Будь в курсі новин</h2>
 
         <div class="subscribe">
           <input type="email" placeholder="Enter your email" />
